# OverboardTodosApp

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  database.py  docker-compose.yml  main.py  models.py  mypy.ini  pyproject.toml  requirements.txt  todosapp.db
.github/workflows/: lint.yaml
alembic/: env.py
alembic/versions/: 2a02eb9ccc1e_initial.py  64bb13831898_add_phone_number_to_user_table.py
app/: celery_app.py  config.py  database.py  main.py  models.py
app/routers/: admin.py  auth.py  tags.py  todos.py  users.py
app/utils/: auth_utils.py
compose/fastapi/: Dockerfile  Dockerfile.prod  entrypoint  start
compose/fastapi/celery/beat/: start
compose/fastapi/celery/flower/: start
compose/fastapi/celery/worker/: start
compose/nginx/: nginx.conf
gql/: context.py  queries.py  schema.py  types.py
routers/: admin.py  auth.py  todos.py  users.py
